Se ha terminado la activity para ver detalles de videojuegos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="plataforma">Plataforma</string>
     <string name="anho_salida">Año Salida</string>
     <string name="genero">Género</string>
-    <string name="desarrolladxora">Desarrolladxora</string>
+    <string name="desarrolladora">Desarrolladora</string>
     <string name="nombre">Nombre</string>
     <string name="volver">Volver</string>
     <string name="a_adir">Añadir</string>
